# toolbook

./: CommandBook.md  Commands.md  LICENSE  README.md  advanced_system_report.html  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: img-tools.md  pdf-tools.md  reports.md  system-info.md  token-management.md
src/toolbook/: __init__.py  cli.py  utils.py
src/toolbook/commands/: doc.py  media.py  reports.py  sys.py
src/toolbook/tDocs/: IMG.py  PDF.py  __init__.py  tPDF.py
src/toolbook/tMedia/: VideoDL.py  __init__.py
src/toolbook/tReports/: __init__.py  codeReport.py  gitRepoReport.py  gitUserReport.py  systemReport.py  webReport.py
src/toolbook/tSys/: __init__.py  fileOrganizer.py  sysInfo.py
tests/: test_utils.py
