[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbook"
version = "0.1.0"
description = "Collection of useful Python tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gaurav Kadam" }
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]