[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbook"
version = "0.1.0"
description = "Collection of useful Python tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gaurav Kadam" }
]

dependencies = [
"aiohappyeyeballs==2.6.1",
"aiohttp==3.13.5",
"aiosignal==1.4.0",
"annotated-doc==0.0.4",
"annotated-types==0.7.0",
"anyio==4.13.0",
"astroid==4.0.4",
"async-timeout==5.0.1",
"attrs==26.1.0",
"Authlib==1.7.2",
"backports-datetime-fromisoformat==2.0.3",
"bandit==1.9.4",
"beautifulsoup4==4.14.3",
"black==26.3.1",
"boltons==21.0.0",
"boolean.py==5.0",
"bracex==2.6",
"bs4==0.0.2",
"CacheControl==0.14.4",
"certifi==2026.4.22",
"cffi==2.0.0",
"charset-normalizer==3.4.7",
"click==8.1.8",
"click-option-group==0.5.9",
"colorama==0.4.6",
"cryptography==48.0.0",
"cyclonedx-python-lib==11.7.0",
"defusedxml==0.7.1",
"dill==0.4.1",
"dparse==0.6.4",
"exceptiongroup==1.2.2",
"face==26.0.0",
"filelock==3.29.0",
"frozenlist==1.8.0",
"glom==25.12.0",
"googleapis-common-protos==1.75.0",
"greenlet==3.5.0",
"h11==0.16.0",
"httpcore==1.0.9",
"httpx==0.28.1",
"httpx-sse==0.4.3",
"idna==3.15",
"importlib_metadata==8.7.1",
"iniconfig==2.3.0",
"isort==8.0.1",
"Jinja2==3.1.6",
"joblib==1.5.3",
"joserfc==1.6.5",
"jsonschema==4.25.1",
"jsonschema-specifications==2025.9.1",
"license-expression==30.4.4",
"lxml==6.1.0",
"mando==0.7.1",
"markdown-it-py==4.2.0",
"MarkupSafe==3.0.3",
"marshmallow==4.3.0",
"mccabe==0.7.0",
"mcp==1.23.3",
"mdurl==0.1.2",
"msgpack==1.1.2",
"multidict==6.7.1",
"mypy_extensions==1.1.0",
"narwhals==2.21.2",
"nltk==3.9.4",
"numpy==2.2.6",
"opentelemetry-api==1.37.0",
"opentelemetry-exporter-otlp-proto-common==1.37.0",
"opentelemetry-exporter-otlp-proto-http==1.37.0",
"opentelemetry-instrumentation==0.58b0",
"opentelemetry-instrumentation-requests==0.58b0",
"opentelemetry-instrumentation-threading==0.58b0",
"opentelemetry-proto==1.37.0",
"opentelemetry-sdk==1.37.0",
"opentelemetry-semantic-conventions==0.58b0",
"opentelemetry-util-http==0.58b0",
"packageurl-python==0.17.6",
"packaging==26.2",
"pandas==2.3.3",
"pathspec==1.1.1",
"peewee==3.19.0",
"pillow==12.2.0",
"pip-api==0.0.34",
"pip-requirements-parser==32.0.1",
"pip_audit==2.10.0",
"platformdirs==4.9.6",
"playwright==1.59.0",
"plotly==6.7.0",
"pluggy==1.6.0",
"propcache==0.5.2",
"protobuf==6.33.6",
"psutil==7.2.2",
"py-serializable==2.1.0",
"pycparser==3.0",
"pydantic==2.13.4",
"pydantic-settings==2.14.1",
"pydantic_core==2.46.4",
"pyee==13.0.1",
"PyGithub==2.9.1",
"Pygments==2.20.0",
"PyJWT==2.12.1",
"pylint==4.0.5",
"PyNaCl==1.6.2",
"pyparsing==3.3.2",
"pytest==9.0.3",
"python-dateutil==2.9.0.post0",
"face==26.0.0",
"filelock==3.29.0",
"frozenlist==1.8.0",
"glom==25.12.0",
"googleapis-common-protos==1.75.0",
"greenlet==3.5.0",
"h11==0.16.0",
"httpcore==1.0.9",
"httpx==0.28.1",
"httpx-sse==0.4.3",
"idna==3.15",
"importlib_metadata==8.7.1",
"iniconfig==2.3.0",
"isort==8.0.1",
"Jinja2==3.1.6",
"joblib==1.5.3",
"joserfc==1.6.5",
"jsonschema==4.25.1",
"jsonschema-specifications==2025.9.1",
"license-expression==30.4.4",
"lxml==6.1.0",
"mando==0.7.1",
"markdown-it-py==4.2.0",
"MarkupSafe==3.0.3",
"marshmallow==4.3.0",
"mccabe==0.7.0",
"mcp==1.23.3",
"mdurl==0.1.2",
"msgpack==1.1.2",
"multidict==6.7.1",
"mypy_extensions==1.1.0",
"narwhals==2.21.2",
"nltk==3.9.4",
"numpy==2.2.6",
"opentelemetry-api==1.37.0",
"opentelemetry-exporter-otlp-proto-common==1.37.0",
"opentelemetry-exporter-otlp-proto-http==1.37.0",
"opentelemetry-instrumentation==0.58b0",
"opentelemetry-instrumentation-requests==0.58b0",
"opentelemetry-instrumentation-threading==0.58b0",
"opentelemetry-proto==1.37.0",
"opentelemetry-sdk==1.37.0",
"opentelemetry-semantic-conventions==0.58b0",
"opentelemetry-util-http==0.58b0",
"packageurl-python==0.17.6",
"packaging==26.2",
"pandas==2.3.3",
"pathspec==1.1.1",
"peewee==3.19.0",
"pillow==12.2.0",
"pip-api==0.0.34",
"pip-requirements-parser==32.0.1",
"pip_audit==2.10.0",
"platformdirs==4.9.6",
"playwright==1.59.0",
"plotly==6.7.0",
"pluggy==1.6.0",
"propcache==0.5.2",
"protobuf==6.33.6",
"psutil==7.2.2",
"py-serializable==2.1.0",
"pycparser==3.0",
"pydantic==2.13.4",
"pydantic-settings==2.14.1",
"pydantic_core==2.46.4",
"pyee==13.0.1",
"PyGithub==2.9.1",
"Pygments==2.20.0",
"PyJWT==2.12.1",
"pylint==4.0.5",
"PyNaCl==1.6.2",
"pyparsing==3.3.2",
"pytest==9.0.3",
"python-dateutil==2.9.0.post0",
"python-dotenv==1.2.2",
"python-multipart==0.0.28",
"pytokens==0.4.1",
"pytz==2026.2",
"pywin32==311",
"PyYAML==6.0.3",
"radon==6.0.1",
"referencing==0.37.0",
"regex==2026.5.9",
"requests==2.34.2",
"rich==15.0.0",
"rpds-py==0.30.0",
"ruamel.yaml==0.19.1",
"ruamel.yaml.clib==0.2.15",
"ruff==0.15.13",
"safety==3.7.0",
"safety-schemas==0.0.16",
"semantic-version==2.10.0",
"semgrep==1.163.0",
"shellingham==1.5.4",
"six==1.17.0",
"sortedcontainers==2.4.0",
"soupsieve==2.8.3",
"sse-starlette==3.4.4",
"starlette==1.0.0",
"stevedore==5.7.0",
"tenacity==9.1.4",
"tomli==2.4.1",
"tomli_w==1.2.0",
"tomlkit==0.15.0",
"tqdm==4.67.3",
"yt-dlp==2025.5.22",
"typer==0.23.1",
"typing-inspection==0.4.2",
"typing_extensions==4.15.0",
"tzdata==2026.2",
"urllib3==2.7.0",
"uvicorn==0.47.0",
"vulture==2.16",
"wcmatch==8.5.2",
"WMI==1.5.1",
"wrapt==1.17.3",
"yarl==1.23.0",
"zipp==3.23.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[project.scripts]
toolbook = "toolbook.cli:app"